# hadcd-agent

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  SECURITY.md  WORKLOAD_POLICY.md  pyproject.toml
.github/workflows/: ci.yml
agent/: Dockerfile  __init__.py  __main__.py  agent.py  autonomous_mode.py  blob_client.py  config.env.example  config.py  dep_check.py  ecobee_setup.py  executor.py  fake_demand.py  heat_source.py  image_cache.py  kasa_power_meter.py  provisioner.py  pytest.ini  rental_session_handler.py  requirements.txt  session_source.py  state.py  storage_server.py  tailscale.py  vast_provider.py  watchdog.py  weather.py  wifi_provision.py
agent/deploy/systemd/: README.md  hadcd-agent.service  hadcd-ha.service  hadcd-provision.service  hadcd-vast-register.service  hadcd-wifi-provision.service
agent/deploy/windows/: README.md  install-service.ps1
agent/sandbox/: Dockerfile  entrypoint.sh
agent/tests/: test_blob_client.py  test_config_example.py  test_fake_demand.py  test_heat_override.py  test_heat_source.py  test_image_cache.py  test_kasa_power_meter.py  test_provisioner.py  test_session_source.py  test_settings_references.py  test_storage_server.py  test_tailscale.py  test_vast_provider.py  test_watchdog.py  test_wifi_provision.py
docs/: THREAT-MODEL.md  deployment.md  mining-setup.md  sunshine-setup.md  vast-ai-host-setup.md
hadcd_workloads/: __init__.py  container.py  gpu_mining_fill.py  handlers.py  p2pool_fill.py  registry.py  sandbox_handler.py  synthetic_heat_fill.py
hadcd_workloads/tests/: test_container_security_floor.py  test_mining_handlers.py  test_synthetic_heat_fill.py
scripts/: install-agent.sh  install-ha.sh  vast-register.sh
